# fastapi-railway-demo

./: pyproject.toml
fastapi_railway_demo/: main.py
