[tool.poetry]
name = "fastapi-railway-demo"
version = "0.1.0"
description = ""
authors = ["liyabonasaki <liyabonasaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn fastapi_railway_demo.main:app --host 0.0.0.0 --port=${PORT}"
